exmp slider done

--- a/realestate.html
+++ b/realestate.html
@@ -502,7 +502,7 @@
                 </div>
 
                 <div class="exmp bgr">
-                    <h2 class="h_03 exmp__heading">Примеры готовых отчетов об объекте недвижимости</h2>
+                    <h2 class="h_03 exmp__headline">Примеры готовых отчетов об объекте недвижимости</h2>
                     <div class="exmp-slider">
                         <div class="exmp-slide">
                             <img src="img/real-estate/exmp-1.jpg" alt="ex" loading="lazy" class="exmp__img">
@@ -510,6 +510,71 @@
                                 <div class="bgr exmp-top">
                                     <h4 class="exmp__heading">Отчет об объекте недвижимости о кадастровой стоимости</h4>
                                     <p class="exmp__text">Пример отчета содержит кадастровую стоимость <br> по которой начисляется налог</p>
+                                </div>
+                                <div class="bgr exmp-bottom">
+                                    <h5 class="exmp__subheading fx-ac">
+                                        <img src="img/real-estate/ic-exmp.svg" alt="i" loading="lazy">
+                                        <span>Содержание отчета:</span>
+                                    </h5>
+                                    <ul class="exmp-list">
+                                        <li>Точный адрес участка</li>
+                                        <li>Площадь участка</li>
+                                        <li>Кадастровая стоимость на запрашиваемую дату</li>
+                                        <li>Может содержать дополнительные сведения</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="exmp-slide">
+                            <img src="img/real-estate/exmp-2.jpg" alt="ex" loading="lazy" class="exmp__img">
+                            <div class="exmp-content">
+                                <div class="bgr exmp-top">
+                                    <h4 class="exmp__heading">Отчет об объекте недвижимости на земельный участок</h4>
+                                    <p class="exmp__text">Это документ, содержащий полную информацию 
+                                        о площади, границах, кадастровой стоимости земельного участка, о наложении арестов, залогов банка, о владельце, а также точный адрес.</p>
+                                </div>
+                                <div class="bgr exmp-bottom">
+                                    <h5 class="exmp__subheading fx-ac">
+                                        <img src="img/real-estate/ic-exmp.svg" alt="i" loading="lazy">
+                                        <span>Содержание отчета:</span>
+                                    </h5>
+                                    <ul class="exmp-list">
+                                        <li>Точный адрес участка</li>
+                                        <li>Площадь участка в м²</li>
+                                        <li>Кадастровая стоимость</li>
+                                        <li>Назначение категорий земельного участка</li>
+                                        <li>Собственники участка, наличие ареста, залога, ипотеки и др.</li>
+                                        <li>План/рисунок участка с границами и координатами точек</li>
+                                        <li>Может содержать дополнительные сведения</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="exmp-slide">
+                            <img src="img/real-estate/exmp-3.jpg" alt="ex" loading="lazy" class="exmp__img">
+                            <div class="exmp-content">
+                                <div class="bgr exmp-top">
+                                    <h4 class="exmp__heading">Отчет об объекте недвижимости о переходе прав</h4>
+                                    <p class="exmp__text">Содержит информацию обо всех сменах собственников недвижимого объекта. Сведения по отчету актуальны с 1998 года. Более ранние сведения необходимо запрашивать в отдельном порядке в органах местного управления по факту регистрации объекта.</p>
+                                </div>
+                                <div class="bgr exmp-bottom">
+                                    <h5 class="exmp__subheading fx-ac">
+                                        <img src="img/real-estate/ic-exmp.svg" alt="i" loading="lazy">
+                                        <span>Содержание отчета:</span>
+                                    </h5>
+                                    <ul class="exmp-list">
+                                        <li>Адрес объекта</li>
+                                        <li>Сведения о всех бывших и существующих правообладателях объекта недвижимости с 1998 года.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="exmp-slide">
+                            <img src="img/real-estate/exmp-1.jpg" alt="ex" loading="lazy" class="exmp__img">
+                            <div class="exmp-content">
+                                <div class="bgr exmp-top">
+                                    <h4 class="exmp__heading">Отчет об объекте недвижимости о кадастровой стоимости</h4>
+                                    <p class="exmp__text">Пример отчета содержит кадастровую стоимость по которой начисляется налог</p>
                                 </div>
                                 <div class="bgr exmp-bottom">
                                     <h5 class="exmp__subheading fx-ac">
