--- a/realestate.html
+++ b/realestate.html
@@ -333,7 +333,7 @@
         <!-- how -->
         <div class="how">
             <div class="inner-wrap">
-                <div class="how-box bgr fx">
+                <div class="how-box bgr fx-jb">
                     <div class="how-title">
                         <h2 class="h_03 how__heading">Как сделать все, как надо?</h2>
                         <p class="how__text">
@@ -344,7 +344,7 @@
                             <br>
                             Проанализируйте сведения. Будут вопросы, сразу связывайтесь с нами.
                         </p>
-                        <div class="how-row fx">
+                        <div class="how-row fx-w">
                             <button class="btn button-att">Отчет об объекте</button>
                             <button class="btn button-att">Отчет о переходе прав</button>
                             <button class="btn">Заказать 2 отчета</button>
@@ -378,7 +378,7 @@
                             <div class="box box--purple bgr">
                                 <p class="box__text">
                                     Напоминаем, что ФИО не предоставляются
-                                    в рамках закона <i class="nwrp">о деперсонализации</i> от 01.03.2023 г.
+                                    в рамках закона <i class="nwrp">о деперсонализации</i> <i class="nwrp">от 01.03.2023 г.</i>
                                     <br>
                                     <br>
                                     Но если объект для сделки уже выбран, то продавец должен предоставить Вам все
@@ -491,25 +491,25 @@
                         </p>
                         <button class="btn">Начать поиск</button>
                     </div>
-                    <div class="dnt-slider fx">
+                    <div class="dnt-slider slick-dots-gray fx">
                         <div class="dnt-slide">
                             <p class="dnt-slide__text">Свидетельство <br> о регистрации права</p>
-                            <img src="img/real-estate/ex-1.png" alt="i" loading="lazy">
+                            <img src="img/real-estate/ex-1.png" alt="i">
                         </div>
                         <div class="dnt-slide">
                             <p class="dnt-slide__text">План БПИ <br> / Кад. паспорт</p>
-                            <img src="img/real-estate/ex-2.png" alt="i" loading="lazy">
+                            <img src="img/real-estate/ex-2.png" alt="i">
                         </div>
                         <div class="dnt-slide">
                             <p class="dnt-slide__text">Выписка из ЕГРН / ГКН <br> / Договор / Наследство</p>
-                            <img src="img/real-estate/ex-3.png" alt="i" loading="lazy">
+                            <img src="img/real-estate/ex-3.png" alt="i">
                         </div>
                     </div>
                 </div>
 
                 <div class="exmp bgr">
                     <h2 class="h_03 exmp__headline">Примеры готовых отчетов об объекте недвижимости</h2>
-                    <div class="exmp-slider">
+                    <div class="exmp-slider slick-dots-gray">
                         <div class="exmp-slide">
                             <img src="img/real-estate/exmp-1.jpg" alt="ex" loading="lazy" class="exmp__img">
                             <div class="exmp-content">
@@ -614,7 +614,7 @@
             <div class="inner-wrap">
                 <h2 class="h_03">Стараемся для Вас</h2>
 
-                <div class="wide-row fx">
+                <div class="wide-slider fx slick-dots-gray">
                     <div class="wide-item bgr">
                         <h3 class="wide-item__heading fx-ac">
                             <img src="img/real-estate/ic-time.svg" alt="i">
@@ -892,11 +892,6 @@
         <!-- /ques -->
 
     </div>
-
-
-
-
-
 
     <!-- footer -->
     <footer class="footer">
