--- a/realestate.html
+++ b/realestate.html
@@ -145,7 +145,7 @@
             <!-- /breadcrumbs -->
 
             <!-- inf -->
-            <div class="inf">
+            <div class="section inf">
                 <div class="inner-wrap">
                     <h2 class="h_02">Узнать информацию об объектах недвижимости</h2>
                     <div class="inf-box fx bgr">
@@ -177,18 +177,26 @@
         </div>
 
         <!-- property -->
-        <div class="property">
+        <div class="section property">
             <div class="inner-wrap">
-                <h2 class="h_03 property__headline">
-                    Получите базовые актуальные сведения <br>
-                    о квартире, доме или земельном участке
-                </h2>
+                <div class="property-header fx-ac">
+                    <h2 class="h_03 property__headline">
+                        Получите базовые актуальные сведения <br>
+                        о квартире, доме или земельном участке
+                    </h2>
+                    <div class="property-counter">
+                        <span class="property__current">1</span> /<span class="property__total">2</span>
+                    </div>
+                    <button class="property-prev btn-action-ico ico-arrow ico-arrow-prev"></button>
+                    <button class="property-next btn-action-ico ico-arrow ico-arrow-next"></button>
+
+                </div>
 
                 <div class="property-slider">
                     <div class="property-item bgr">
-                        <div class="property-header">
-                            <span class="property-header__heading h_03">Покупаю новострой</span>
-                            <img src="img/real-estate/property-bg.jpg" alt="i" class="property-header__bg">
+                        <div class="property-item-header">
+                            <span class="property-item-header__heading h_03">Покупаю новострой</span>
+                            <img src="img/real-estate/property-bg.jpg" alt="i" class="property-item-header__bg">
                         </div>
                         <div class="property-details fx-w">
                             <div class="property-col">
@@ -225,9 +233,9 @@
                     </div>
 
                     <div class="property-item bgr">
-                        <div class="property-header">
-                            <span class="property-header__heading h_03">Покупаю или арендую вторичку</span>
-                            <img src="img/real-estate/property-bg_2.jpg" alt="i" class="property-header__bg">
+                        <div class="property-item-header">
+                            <span class="property-item-header__heading h_03">Покупаю или арендую вторичку</span>
+                            <img src="img/real-estate/property-bg_2.jpg" alt="i" class="property-item-header__bg">
                         </div>
                         <div class="property-details fx-w">
                             <div class="property-col">
@@ -331,7 +339,7 @@
         <!-- /wide -->
 
         <!-- how -->
-        <div class="how">
+        <div class="section how">
             <div class="inner-wrap">
                 <div class="how-box bgr fx-jb">
                     <div class="how-title">
@@ -378,7 +386,8 @@
                             <div class="box box--purple bgr">
                                 <p class="box__text">
                                     Напоминаем, что ФИО не предоставляются
-                                    в рамках закона <i class="nwrp">о деперсонализации</i> <i class="nwrp">от 01.03.2023 г.</i>
+                                    в рамках закона <i class="nwrp">о деперсонализации</i> <i class="nwrp">от 01.03.2023
+                                        г.</i>
                                     <br>
                                     <br>
                                     Но если объект для сделки уже выбран, то продавец должен предоставить Вам все
@@ -459,7 +468,7 @@
         <!-- /wide -->
 
         <!-- dnt -->
-        <div class="dnt">
+        <div class="section dnt">
             <div class="inner-wrap">
                 <div class="dnt-box bgr fx">
                     <div class="dnt-title">
@@ -657,7 +666,7 @@
         <!-- /wide -->
 
         <!-- serv -->
-        <div class="serv">
+        <div class="section serv">
             <div class="inner-wrap">
                 <div class="serv-box bgr">
                     <h2 class="h_03 serv__heading">О сервисе запросов сведений</h2>
@@ -700,7 +709,7 @@
         <!-- /serv -->
 
         <!-- req -->
-        <div class="req">
+        <div class="section req">
             <div class="inner-wrap">
                 <div class="req-box bgr">
                     <div class="req-col">
@@ -718,7 +727,7 @@
         <!-- /req -->
 
         <!-- rev -->
-        <div class="rev">
+        <div class="section rev">
             <div class="inner-wrap">
                 <div class="rev-box bgr">
                     <h2 class="h_03 rev__heading">Отзывы о нас и сервисе</h2>
@@ -819,7 +828,7 @@
         <!-- /rev -->
 
         <!-- blg -->
-        <div class="blg">
+        <div class="section blg">
             <div class="inner-wrap">
                 <div class="blg-row fx-w">
                     <div class="blg-title">
@@ -869,7 +878,7 @@
         <!-- /blg -->
 
         <!-- ques -->
-        <div class="ques">
+        <div class="section ques">
             <div class="inner-wrap">
                 <h2 class="h_03 ques__heading">Если остались вопросы, <br> обязательно свяжитесь с нами: </h2>
                 <p class="ques__text">
