more mobile setions

--- a/realestate.html
+++ b/realestate.html
@@ -37,7 +37,7 @@
 
 <body>
     <!-- wrap -->
-    <div class="wrap wrap-main">
+    <div class="wrap wrap-inner wrap-new">
 
         <!-- header -->
         <header class="header">
@@ -136,13 +136,16 @@
 
         <div class="page-full">
 
-            <!-- breadcrumbs -->
-            <ul class="breadcrumbs fx">
-                <li class="breadcrumbs-item"><a href="#" class="breadcrumbs__link">Главная</a></li>
-                <li class="breadcrumbs-item"><a href="#" class="breadcrumbs__link">Отчеты</a></li>
-                <li class="breadcrumbs-item"><a href="#" class="breadcrumbs__link">Об объектах недвижимости</a></li>
-            </ul>
-            <!-- /breadcrumbs -->
+            <!--breadcrumbs-box-->
+            <div class="breadcrumbs-box">
+                <ol class="menu">
+                    <li><a href="">Купить</a></li>
+                    <li><a href="">Квартиру</a></li>
+                    <li><a href="">Вторичный рынок</a></li>
+                    <li><a href="">2-комн. квартира</a></li>
+                </ol>
+            </div>
+            <!--/breadcrumbs-box-->
 
             <!-- inf -->
             <div class="section inf">
@@ -299,7 +302,7 @@
                     После показа квартиры запишите ее номер. <br>
                     Вводите по порядку или вставьте полный адрес от города до квартиры.
                 </h2>
-                <p class="apart__text">Например: Москва, Проспект Мира 189, кв 10 </p>
+                <p class="apart__text">Например: Москва, <i class="nwrp">Проспект Мира 189, кв 10</i> </p>
                 <div class="apart-form fx">
                     <input type="text" class="form-input"
                         placeholder="Начните вводить адрес с города или вставьте кадастровый номер">
@@ -328,7 +331,7 @@
         <!-- page -->
 
         <!-- wide -->
-        <div class="wide">
+        <div class="wide fx-col">
             <div class="inner-wrap">
                 <h2 class="h_02">
                     Позаботьтесь о себе <br>
@@ -342,7 +345,7 @@
         <!-- how -->
         <div class="section how">
             <div class="inner-wrap">
-                <div class="how-box bgr fx-jb">
+                <div class="how-box bgr fx-ac">
                     <div class="how-title">
                         <h2 class="h_03 how__heading">Как сделать все, как надо?</h2>
                         <p class="how__text">
@@ -353,13 +356,13 @@
                             <br>
                             Проанализируйте сведения. Будут вопросы, сразу связывайтесь с нами.
                         </p>
+                        <img src="img/real-estate/how.jpg" alt="i" loading="lazy" class="how__img">
                         <div class="how-row fx-w">
                             <button class="btn button-att">Отчет об объекте</button>
                             <button class="btn button-att">Отчет о переходе прав</button>
                             <button class="btn">Заказать 2 отчета</button>
                         </div>
                     </div>
-                    <img src="img/real-estate/how.jpg" alt="i" loading="lazy" class="how__img">
                 </div>
 
                 <div class="how-more bgr">
