--- a/realestate.html
+++ b/realestate.html
@@ -205,8 +205,8 @@
                         <div class="property-details fx-w">
                             <div class="property-col">
                                 <div class="property-box">
-                                    <h3 class="property-details__heading">Базовые сведения о строящемся доме и з/у:
-                                    </h3>
+                                    <h3 class="property-details__heading">Базовые сведения о строящемся <i
+                                            class="nwrp">доме и з/у:</i></h3>
                                     <ul class="property-details__list">
                                         <li>— Дата и номер регистрации </li>
                                         <li>— Кадастровую стоимость</li>
@@ -277,7 +277,6 @@
             </div>
         </div>
         <!-- /property -->
-
 
         <!-- page -->
         <div class="page-full">
@@ -502,21 +501,21 @@
                             Его можно найти в документах на недвижимость, выписке ЕГРН, кадастровом паспорте, в
                             “Зелёнке” на дом, участок, квартиру и т.д.
                         </p>
+                        <div class="dnt-slider slick-dots-gray fx">
+                            <div class="dnt-slide">
+                                <p class="dnt-slide__text">Свидетельство <br> о регистрации права</p>
+                                <img src="img/real-estate/ex-1.png" alt="i">
+                            </div>
+                            <div class="dnt-slide">
+                                <p class="dnt-slide__text">План БПИ <br> / Кад. паспорт</p>
+                                <img src="img/real-estate/ex-2.png" alt="i">
+                            </div>
+                            <div class="dnt-slide">
+                                <p class="dnt-slide__text">Выписка из ЕГРН / ГКН <br> / Договор / Наследство</p>
+                                <img src="img/real-estate/ex-3.png" alt="i">
+                            </div>
+                        </div>
                         <button class="btn">Начать поиск</button>
-                    </div>
-                    <div class="dnt-slider slick-dots-gray fx">
-                        <div class="dnt-slide">
-                            <p class="dnt-slide__text">Свидетельство <br> о регистрации права</p>
-                            <img src="img/real-estate/ex-1.png" alt="i">
-                        </div>
-                        <div class="dnt-slide">
-                            <p class="dnt-slide__text">План БПИ <br> / Кад. паспорт</p>
-                            <img src="img/real-estate/ex-2.png" alt="i">
-                        </div>
-                        <div class="dnt-slide">
-                            <p class="dnt-slide__text">Выписка из ЕГРН / ГКН <br> / Договор / Наследство</p>
-                            <img src="img/real-estate/ex-3.png" alt="i">
-                        </div>
                     </div>
                 </div>
 
