--- a/realestate.html
+++ b/realestate.html
@@ -191,8 +191,8 @@
                         <div class="property-counter">
                             <span class="property__current">1</span> /<span class="property__total">2</span>
                         </div>
-                        <button class="property-prev btn-action-ico ico-arrow ico-arrow-prev"></button>
-                        <button class="property-next btn-action-ico ico-arrow ico-arrow-next"></button>
+                        <button class="btn-action-ico ico-arrow ico-arrow-prev"></button>
+                        <button class="btn-action-ico ico-arrow ico-arrow-next"></button>
                     </div>
                 </div>
 
@@ -520,7 +520,13 @@
                 </div>
 
                 <div class="exmp bgr">
-                    <h2 class="h_03 exmp__headline">Примеры готовых отчетов об объекте недвижимости</h2>
+                    <div class="exmp-header fx-ac">
+                        <h2 class="h_03 exmp__headline">Примеры готовых отчетов об объекте недвижимости</h2>
+                        <div class="exmp-controls fx-ac">
+                            <button class="btn-action-ico ico-arrow ico-arrow-prev"></button>
+                            <button class="btn-action-ico ico-arrow ico-arrow-next"></button>
+                        </div>
+                    </div>
                     <div class="exmp-slider slick-dots-gray">
                         <div class="exmp-slide">
                             <img src="img/real-estate/exmp-1.jpg" alt="ex" loading="lazy" class="exmp__img">
