--- a/realestate.html
+++ b/realestate.html
@@ -158,16 +158,19 @@
                                 субъекте
                                 (продавце) сделки.
                             </p>
-                            <p class="inf__description">
-                                Мы давно убедились, что отправной точкой на пути к успешной сделке лежит самостоятельный
-                                анализ
-                                данных. Даже если вы не разбираетесь в цифрах, вам поможет свежий человек, логика и
-                                здравый
-                                смысл.
-                                <br><br>
-                                Запросите отчет об интересующем вас объекте недвижимости с помощью нашего онлайн-сервиса
-                                информационных отчетов, согласно сведениям ЕГРН.
-                            </p>
+                            <div class="tgl-mob">
+                                <p class="inf__description">
+                                    Мы давно убедились, что отправной точкой на пути к успешной сделке лежит самостоятельный
+                                    анализ
+                                    данных. Даже если вы не разбираетесь в цифрах, вам поможет свежий человек, логика и
+                                    здравый
+                                    смысл.
+                                    <br><br>
+                                    Запросите отчет об интересующем вас объекте недвижимости с помощью нашего онлайн-сервиса
+                                    информационных отчетов, согласно сведениям ЕГРН.
+                                </p>
+                                <span class="btn-action-ico ico-arrow tgl-mob__btn"></span>
+                            </div>
                         </div>
                         <div class="inf__img">
                             <img src="img/real-estate/realestate-info.jpg" alt="Image">
@@ -333,11 +336,14 @@
         <div class="wide fx-col">
             <div class="inner-wrap">
                 <h2 class="h_02">
-                    Позаботьтесь о себе <br>
+                    Позаботьтесь <i class="nwrp">о себе</i> <br>
                     и сделайте все, как надо.
                 </h2>
             </div>
-            <img src="img/real-estate/wide__bg.jpg" alt="i" loading="lazy" class="wide__bg">
+            <picture>
+                <source media="(min-width: 700px)" srcset="img/real-estate/wide__bg.jpg">
+                <img src="img/real-estate/wide__bg-mob.jpg" alt="i" loading="lazy" class="wide__bg">
+            </picture>
         </div>
         <!-- /wide -->
 
@@ -355,7 +361,10 @@
                             <br>
                             Проанализируйте сведения. Будут вопросы, сразу связывайтесь с нами.
                         </p>
-                        <img src="img/real-estate/how.jpg" alt="i" loading="lazy" class="how__img">
+                        <picture>
+                            <source media="(min-width: 700px)" srcset="img/real-estate/how.jpg">
+                            <img src="img/real-estate/how-mob.jpg" alt="i" loading="lazy" class="how__img">
+                        </picture>
                         <div class="how-row fx-w">
                             <button class="btn button-att">Отчет об объекте</button>
                             <button class="btn button-att">Отчет о переходе прав</button>
@@ -466,7 +475,10 @@
 
                 </div>
             </div>
-            <img src="img/real-estate/wide__bg-2.jpg" alt="i" loading="lazy" class="wide__bg">
+            <picture>
+                <source media="(min-width: 700px)" srcset="img/real-estate/wide__bg-2.jpg">
+                <img src="img/real-estate/wide__bg-2-mob.jpg" alt="i" loading="lazy" class="wide__bg">
+            </picture>
         </div>
         <!-- /wide -->
 
@@ -627,6 +639,7 @@
         </div>
         <!-- /dnt -->
 
+
         <!-- wide -->
         <div class="wide">
             <div class="inner-wrap">
@@ -670,7 +683,10 @@
                     </div>
                 </div>
             </div>
-            <img src="img/real-estate/guranti.jpg" alt="i" loading="lazy" class="wide__bg">
+            <picture>
+                <source media="(min-width: 700px)" srcset="img/real-estate/guranti.jpg">
+                <img src="img/real-estate/guranti-mob.jpg" alt="i" loading="lazy" class="wide__bg">
+            </picture>
         </div>
         <!-- /wide -->
 
@@ -729,7 +745,10 @@
                         </p>
                         <a href="#" class="btn button-att-second">Оформить запрос</a>
                     </div>
-                    <img src="img/real-estate/req_bg.jpg" alt="i" loading="lazy" class="req__bg">
+                    <picture>
+                        <source media="(min-width: 700px)" srcset="img/real-estate/req_bg.jpg">
+                        <img src="img/real-estate/req_bg-mob.jpg" alt="i" loading="lazy" class="req__bg">
+                    </picture>
                 </div>
             </div>
         </div>
@@ -972,7 +991,10 @@
                     <a href="#">политикой конфиденциальности</a>.
                 </p>
             </div>
-            <img src="img/real-estate/ques__bg.jpg" alt="i" loading="lazy" class="ques__bg">
+            <picture>
+                <source media="(min-width: 700px)" srcset="img/real-estate/ques__bg.jpg">
+                <img src="img/real-estate/ques__bg-mob.jpg" alt="i" loading="lazy" class="ques__bg">
+            </picture>
         </div>
         <!-- /ques -->
 
