--- a/realestate.html
+++ b/realestate.html
@@ -1069,7 +1069,7 @@
                 <div class="pays-wrap">
                     <ul class="list">
                         <li><img src="./img/icons/pay01.png" alt=""></li>
-                        <li><img src="./img/icons/pay02.png" alt=""></li>
+                        <li><img src="./img/icons/mixplat.png" alt=""></li>
                         <li><img src="./img/icons/pay03.png" alt=""></li>
                         <li><img src="./img/icons/pay04.png" alt=""></li>
                         <li><img src="./img/icons/pay05.png" alt=""></li>
