--- a/realestate.html
+++ b/realestate.html
@@ -306,7 +306,7 @@
                     После показа квартиры запишите ее номер. <br>
                     Вводите по порядку или вставьте полный адрес от города до квартиры.
                 </h2>
-                <p class="apart__text">Например: Москва, <i class="nwrp">Проспект Мира 189, кв 10</i> </p>
+                <p class="apart__text" id="apart_bottom" >Например: Москва, <i class="nwrp">Проспект Мира 189, кв 10</i> </p>
                 <div class="apart-form fx">
                     <input type="text" class="form-input"
                         placeholder="Начните вводить адрес с города или вставьте кадастровый номер">
@@ -754,7 +754,7 @@
                             Квартира, дом, земельный участок. Все данные отобразятся в одном отчете. По квартирам дается
                             информация по управляющей компании.
                         </p>
-                        <a href="#" class="btn button-att-second">Оформить запрос</a>
+                        <a href="#apart_bottom" class="btn button-att-second">Оформить запрос</a>
                     </div>
                     <picture>
                         <source media="(min-width: 700px)" srcset="img/real-estate/req_bg.jpg">
