--- a/realestate.html
+++ b/realestate.html
@@ -474,11 +474,11 @@
                     <form class="wide-form fx form-validate">
                         <div class="form-box">
                             <input required type="text" class="form-input" name="name" placeholder="Имя">
-                            <span class="form-error nameError">Не более 15 символов</span>
+                            <span class="form-error"></span>
                         </div>
                         <div class="form-box">
                             <input required type="email" class="form-input" name="email" placeholder="E-mail">
-                            <span class="form-error emailError">Некорректный e-mail</span>
+                            <span class="form-error"></span>
                         </div>
                         <button type="submit" class="btn">Отправить</button>
                     </form>
@@ -995,16 +995,16 @@
                 <form class="ques-form fx form-validate">
                     <div class="form-box">
                         <input required type="text" class="form-input" name="name" placeholder="Имя">
-                        <span class="form-error nameError">Не более 15 символов</span>
+                        <span class="form-error"></span>
                     </div>
                     <div class="form-box">
                         <input required type="email" class="form-input" name="email" placeholder="E-mail">
-                        <span class="form-error emailError">Некорректный e-mail</span>
+                        <span class="form-error"></span>
                     </div>
                     <div class="form-box --last">
                         <textarea required type="text" class="form-input" name="comment"
                             placeholder="Комментарий"></textarea>
-                        <span class="form-error commentError">Не более 150 символов</span>
+                        <span class="form-error"></span>
                     </div>
                     <button type="submit" class="btn">Отправить</button>
                 </form>
